[feat] 공유 기능 및 메인 페이지 구현

--- a/trip-vue/index.html
+++ b/trip-vue/index.html
@@ -3,13 +3,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>
+      enjoyTrip | 물결이 바다를 안고 바람이 하늘을 날아도, 너의 미소는 내 마음을 항상 따뜻하게
+      만든다
+    </title>
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.4.0/kakao.min.js"
+      integrity="sha384-mXVrIX2T/Kszp6Z0aEWaA8Nm7J6/ZeWXbL8UpGRjKwWe56Srd/iyNmWMBhcItAjH"
+      crossorigin="anonymous"
+    ></script>
     <script
       type="text/javascript"
       src="//dapi.kakao.com/v2/maps/sdk.js?appkey=825ba8eb447bc5dac3843c7ff02c14fa&libraries=services"
